Wed Apr 20 12:20:26 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* common/Attributes.h:
	* common/ContentHandler.h:
	* common/DTDHandler.h:
	* common/EntityResolver.h:
	* common/ErrorHandler.h:
	* common/Locator.h:
	* common/XMLReader.h:

	  Added virtual destructors to address g++ 4.0 warnings.

	* common/Attributes.cpp:
	* common/ContentHandler.cpp:
	* common/DTDHandler.cpp:
	* common/EntityResolver.cpp:
	* common/ErrorHandler.cpp:
	* common/Locator.cpp:
	* common/XMLReader.cpp:

	  New files containing destructors.

	* common/NamespaceSupport.cpp (getURI):

	  Fixed "variable may be used uninitialized" warning.

Mon Apr 18 14:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * parser/parser/Entity_Manager.cpp:
          Removed not uses static const

        * parser/parser/Entity_Manager.i:
          Initialise pointer with 0

Sun Feb 13 23:54:25 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	From Lothar Werzinger <lothar at xcerla dot com>
	* apps/svcconf/Svcconf_Handler.cpp:

	  Enhanced error messages.

Wed Jan  5 14:08:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * common/DefaultHandler.{h,cpp,i}:
        * common/NamespaceSupport.{h,cpp,i}:
        * common/Transcode.{h,cpp,i}:
        * examples/SAXPrint/Print_Handler.{cpp,i}:
          Removed .i file and updated h/cpp file

        * common/Makefile.am:
          Updated

Tue Aug 17 19:07:11 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* common/NamespaceSupport.cpp:

	  Changed ACE_NEW_RETURN to use "NS_Node_T" instead of "struct
	  NS_Node_T" --- the latter triggers a gcc 3.3 parser bug when
	  used with the "new (std::nothrow)" version of ACE_NEW_RETURN.
	  Fortunately, the "struct" is unnecessary.

Sat Feb 21 23:51:25 2004  .  <.@isis.vanderbilt.edu>

        * common/Exception.h:
        * common/Exception.cpp:
        * common/SAXExceptions.h:
        * common/SAXExceptions.cpp:

          Fixed a few bugs in the way the exceptions were set-up in the