@@ -6,4 +6,8 @@ project(ACEXML_Parser): acelib, core {
   after        += ACEXML
   libs         += ACEXML
   dynamicflags += ACEXML_PARSER_BUILD_DLL
+
+  Pkgconfig_Files {
+    ACEXML_Parser.pc.in
+  }
 }
