@@ -1,3 +1,15 @@
+Fri Apr 22 11:09:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* parser/parser/Makefile.am:
+	* common/Makefile.am:
+
+	  Regenerated.
+
+	* parser/parser/parser.mpc:
+	* common/common.mpc:
+
+	  Add Pkgconfig_Files section.
+
 Wed Apr 20 12:20:26 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* common/Attributes.h:
